--- a/static/style/extend/info_base.css
+++ b/static/style/extend/info_base.css
@@ -1,10 +1,17 @@
-@import "../extend/base.css";
+@import "base.css";
 
-/*
-----------------
----   Logo   ---
-----------------
-*/
+.content{
+    width: 80%;
+    margin: 0 10%;
+    min-height: 95%;
+	display:flex;
+	flex-direction:column;
+	text-align: center;
+}
+
+.justydiv{
+    text-align: justify;
+}
 
 h1 {
     font-size: 3.5rem;
@@ -13,28 +20,7 @@ h1 {
     text-align: center;
 }
 
-.alx-cont{
-	width: 100%;
-    min-height: 95%;
-	display:flex;
-	flex-direction:column;
-	text-align: center;
-}
-
-.alx-flex-box:first-child{
-	position:relative;
-	height: 50px;
-	top: -13px;
-	left: -143px;
-	text-align: center;
-}
-
-.alx-flex-box:last-child{
-	margin: 10px;
-	text-align:center;
-}
-
-.input-in {
+textarea{
     border: none;
     margin: 10px 0px;
     min-width: 250px;
@@ -47,7 +33,7 @@ h1 {
     text-align:center;
 }
 
-.send-btn {
+button{
     border: none;
     border-radius: 10px;
     width: 150px;
@@ -63,3 +49,15 @@ button:hover {
     color: #161F40;
     background: #fff;
 }
+
+p{
+    text-indent: 4rem;
+}
+
+hr{
+    width: 70%;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
