--- a/static/style/trashbox-base.css
+++ b/static/style/trashbox-base.css
@@ -1,13 +1,13 @@
 @import "extend/base.css";
 
 .nav{
-    top: -45px;
+    top: -75px;
 }
 .nav, .foo{
     position: fixed;
     z-index: 2;
     width: 100vw;
-    height: 60px;
+    height: 100px;
     box-shadow: 0px 0px 5px #000;
     transition: all 200ms;
     display: flex;
@@ -16,10 +16,10 @@
     background-color: #fff;
 }
 .foo{
-    bottom: -45px;
+    bottom: -75px;
 }
 .foo:hover, .nav:hover{
-    cursor: pointer;
+    cursor: default;
 }
 
 .alx-foo {
@@ -29,4 +29,19 @@
 .content{
     z-index: 1;
     height: 100%;
+}
+
+.nav:first-child{
+    justify-content: left;
+}
+
+#foo-inside{
+    display: none;
+    opacity: 0;
+    transition: opacity 500ms;
+}
+#nav-inside{
+    display: none;
+    opacity: 0;
+    transition: opacity 500ms;
 }
