--- a/templates/extend/user_panel.html
+++ b/templates/extend/user_panel.html
@@ -1,9 +1,12 @@
 <link rel=stylesheet type=text/css href="/static/style/extend/user_panel.css"/>
 <div id="userinfo">
-
-    <img id="userimg" src="">
-    <span id="username"></span>
-    <span id="userlogout" onclick="signOut()">Wyloguj</span>
-    <div class="g-signin2" style="display: none;" data-onsuccess="onSignIn"></div>
+    <div class="avatar">
+        <img id="userimg" src="">
+    </div>
+    <div class="user_menu">
+        <div id="username"></div>
+        <div id="userlogout" onclick="signOut()"><span class="user_logout">Wyloguj</span></div>
+        <div class="g-signin2" style="display: none;" data-onsuccess="onSignIn"></div>
+    </div>
 </div>
 <script src="/static/scripts/js/UserPanel.js"></script>
