--- a/templates/info_pages/404.html
+++ b/templates/info_pages/404.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    {% include 'extend/head.html' %}
-    <link rel=stylesheet type=text/css href="/static/style/info_pages/error.css">
+{% extends "info_pages/info_base.html" %}
+
+{% block title %}
     <title>Trashpanda - Error 404</title>
-</head>
-<body>
-<div class="alx-cont">
-    <div class="alx-flex-box">
-            <h1>Error 404</h1>
-            <hr/>
-            <h3>Nie znaleziono strony!</h3>
+{% endblock %}
+
+{% block content %}
+    <div style="margin-top: 30vh">
+        <h1>Error 404</h1>
+        <hr/>
+        <h3>Nie znaleziono strony!</h3>
     </div>
-</div>
-{% include 'extend/footer.html' %}
-</body>
-</html>
+{% endblock %}
