--- a/templates/info_pages/about.html
+++ b/templates/info_pages/about.html
@@ -1,32 +1,25 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    {% include 'extend/head.html' %}
-    <link rel=stylesheet type=text/css href="/static/style/info_pages/about.css">
+{% extends "info_pages/info_base.html" %}
+
+{% block title %}
     <title>Trashpanda - O nas</title>
-</head>
-<body>
-<div class="alx-cont">
-        <div class="alx-flex-box">
-            <img src="/static/pic/logo.png">
-        </div>
-        <div class="alx-flex-box">
-            <h1>O nas</h1>
-            <p>Mały zespół złożony z 5 studentów.</p>
-            <p>PWSZ Nysa - 2018</p>
-        </div>
-    <div class="alx-flex-box">
+{% endblock %}
+
+{% block content %}
+
+    <div>
+        <h1>O nas</h1>
+        <p>Mały zespół złożony z 5 studentów.</p>
+        <p>PWSZ Nysa - 2018</p>
+    </div>
+    <div>
         <img src="/static/pic/autor.png">
     </div>
-    <div class="alx-flex-box">
+    <div>
         <br>Aleksander Sinkowski
         <br>Serhii Riznychuk
         <br>Mikołaj Rychel
         <br>Aleksandra Pawlaczyk
         <br>Marcin Ochociński
     </div>
-</div>
-{% include 'extend/footer.html' %}
-{% include 'extend/user_panel.html' %}
-</body>
-</html>
+
+{% endblock %}
