--- a/templates/info_pages/info.html
+++ b/templates/info_pages/info.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    {% include 'extend/head.html' %}
-    <link rel=stylesheet type=text/css href="/static/style/info_pages/info.css">
+{% extends "info_pages/info_base.html" %}
+
+{% block title %}
     <title>Trashpanda - Info</title>
-</head>
-<body>
-<div class="alx-cont">
-    <div class="alx-flex-box">
-        <img src="static/pic/logo.png">
-    </div>
-    <div class="alx-flex-box">
+{% endblock %}
+
+{% block content %}
+    <div>
         <h1>Informacje</h1>
         <p>Chmura ta powstała na potrzeby projektu informatycznego.</p>
         <p>PWSZ Nysa - 2018</p>
     </div>
-    <div class="alx-flex-box">
+    <div class="justydiv">
         <h1>Regulamin</h1>
         <p>Skąd się to wzięło?</p>
         <p>W przeciwieństwie do rozpowszechnionych opinii, Lorem Ipsum nie jest tylko przypadkowym tekstem. Ma ono
@@ -30,18 +25,16 @@
             1.10.32 i 1.10.33 z „de Finibus Bonorum et Malorum” Cycerona, są odtworzone w dokładnej, oryginalnej formie,
             wraz z angielskimi tłumaczeniami H. Rackhama z 1914 roku.
         <p>Skąd to wziąć?</p>
-        Jest dostępnych wiele różnych wersji Lorem Ipsum, ale większość zmieniła się pod wpływem dodanego humoru czy
-        przypadkowych słów, które nawet w najmniejszym stopniu nie przypominają istniejących. Jeśli masz zamiar użyć
-        fragmentu Lorem Ipsum, lepiej mieć pewność, że nie ma niczego „dziwnego” w środku tekstu. Wszystkie Internetowe
-        generatory Lorem Ipsum mają tendencje do kopiowania już istniejących bloków, co czyni nasz pierwszym prawdziwym
-        generatorem w Internecie. Używamy zawierającego ponad 200 łacińskich słów słownika, w kontekście wielu znanych
-        sentencji, by wygenerować tekst wyglądający odpowiednio. To wszystko czyni „nasz” Lorem Ipsum wolnym od
-        powtórzeń, humorystycznych wstawek czy niecharakterystycznych słów.
+        <p>Jest dostępnych wiele różnych wersji Lorem Ipsum, ale większość zmieniła się pod wpływem dodanego humoru czy
+            przypadkowych słów, które nawet w najmniejszym stopniu nie przypominają istniejących. Jeśli masz zamiar użyć
+            fragmentu Lorem Ipsum, lepiej mieć pewność, że nie ma niczego „dziwnego” w środku tekstu. Wszystkie
+            Internetowe
+            generatory Lorem Ipsum mają tendencje do kopiowania już istniejących bloków, co czyni nasz pierwszym
+            prawdziwym
+            generatorem w Internecie. Używamy zawierającego ponad 200 łacińskich słów słownika, w kontekście wielu
+            znanych
+            sentencji, by wygenerować tekst wyglądający odpowiednio. To wszystko czyni „nasz” Lorem Ipsum wolnym od
+            powtórzeń, humorystycznych wstawek czy niecharakterystycznych słów.
     </div>
-</div>
-<br/>
-<br/>
-{% include 'extend/footer.html' %}
-{% include 'extend/user_panel.html' %}
-</body>
-</html>
+
+{% endblock %}
