Rozwiązanie dla logowania, chyba...

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -6,6 +6,12 @@
 -------------------
 */
 
+.classicfont{
+    margin-top: 20px;
+    font-size: 1rem;
+    font-family: 'Consolas', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+}
+
 #userinfo{
     display: none;
         /*display: initial;*/
