--- a/templates/trashbox.html
+++ b/templates/trashbox.html
@@ -1,8 +1,8 @@
 {% extends 'trashbox_base.html' %}
 {% block content %}
     <link rel=stylesheet type=text/css href="/static/style/trashbox.css">
-    <div class="mybox">
-        <h2> - My Trashbox - </h2>
+    <script src="/static/scripts/js/loadingPage.js"></script>
+    <script>loadingPage('36253978469');</script>
+    <div id="loadContent">
     </div>
-
 {% endblock %}
