--- a/static/style/trashbox-base.css
+++ b/static/style/trashbox-base.css
@@ -45,3 +45,16 @@
     opacity: 0;
     transition: opacity 500ms;
 }
+
+.trashbox-container{
+    width: 100%;
+    height: 100%;
+}
+.trashbox-content{
+    width: 84%;
+    height: 88vh;
+    margin: 0% 5%;
+    padding: 3%;
+    box-shadow: 2px 2px 10px #ddd, -2px -2px 10px #ddd;
+    text-align: center;
+}
