--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
             <button class="alx-btn" style="border-radius: 10px" onclick="loginTest()">Login Test</button>
             <button class="alx-btn" style="border-radius: 10px" onclick="closeLoginForm()">Zamknij</button>
         </div>
+        <div class="classicfont">
+            Jeśli masz problem z przelogowaniem, spróbuj zalogować się na inne konto po stronie google.
+        </div>
     </div>
 </div>
 <div id="userinfo">
