--- a/templates/trashbox_base.html
+++ b/templates/trashbox_base.html
@@ -3,6 +3,7 @@
 <head>
     {% include 'extend/head.html' %}
     <link rel=stylesheet type=text/css href="/static/style/trashbox-base.css">
+    <link rel="stylesheet" href="/static/style/fontello-c536326c/css/fontello.css" type="text/css"/>
     <title>Trashpanda - TrashBox</title>
 </head>
 <body id="body" onload="opa()">
