--- a/templates/trashbox.html
+++ b/templates/trashbox.html
@@ -1,8 +1,73 @@
 {% extends 'trashbox_base.html' %}
 {% block content %}
     <link rel=stylesheet type=text/css href="/static/style/trashbox.css">
-    <script src="/static/scripts/js/loadingPage.js"></script>
-    <script>loadingPage('36253978469', 'home');</script>
+
     <div id="loadContent">
+        <br>
+        <h1>- My Trashbox -</h1>
+        <span style="font-size: 1.2rem;">Katalog: {{ currentdir }}</span>
+        <br>
+        <table>
+            <thead>
+            <tr>
+                <th><a href="/mytrashbox?path={{ backpath }}"><i class="icon-left-big"></i></a></th>
+                <th>Nazwa</th>
+                <th>Rozmiar</th>
+                <th>Tags</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+{#            {% for lista in lista %}#}
+            {% for file in file %}
+                <tr>
+                    <td><i class="icon-{{ file.icon }}"></i></td>
+                    <td>{{ file.name }} <i class="icon-{{ file.lock }}"></i></td>
+                    <td>{{ file.size }}</td>
+                    <td>
+                        {% if file.tag | length > 1 %}
+                            <select class="hover">
+                                {% for tag in file.tag %}
+                                    <option>{{ tag }}</option>
+                                {% endfor %}
+                            </select>
+                        {% endif %}
+                    </td>
+                    <td><i onclick="openmenu()" class="icon-ellipsis-vert hover"></i></td>
+                </tr>
+            {% endfor %}
+{#            {% endfor %}#}
+            </tbody>
+        </table>
+        <form class="popmenu" id="popmenu">
+            <input type="hidden" name="filepath" value="filepath">
+            <input type="submit" name="open" value="Otwórz">
+            <input type="button" name="close" value="Zamknij" onclick="closemenu()">
+        </form>
+        <script>
+            var pop = document.getElementById("popmenu");
+
+            function openmenu() {
+                var eventy = (event.clientY - 17) + 'px';
+                pop.style.top = eventy;
+                anim;
+                var anim = setInterval(function () {
+                    pop.style.right = '10px';
+                    clearInterval(anim);
+                }, 150);
+            }
+
+            function closemenu() {
+                pop.style.right = -450 + 'px';
+                console.log('close');
+            }
+
+            function openfile(link) {
+                window.location.href='/trashview?id=' + link;
+            }
+
+        </script>
+        {#        <script src="/static/scripts/js/loadingPage.js"></script>#}
+        {#        <script>loadingPage('36253978469', 'home');</script>#}
     </div>
 {% endblock %}
