--- a/templates/trashbox.html
+++ b/templates/trashbox.html
@@ -1,6 +1,7 @@
 {% extends 'trashbox_base.html' %}
 {% block content %}
     <link rel=stylesheet type=text/css href="/static/style/trashbox.css">
+    <script async src="/static/scripts/js/trashoboxOptionPopUp.js"></script>
 
     <div id="loadContent">
         <br>
@@ -39,34 +40,12 @@
 {#            {% endfor %}#}
             </tbody>
         </table>
-        <form class="popmenu" id="popmenu">
+        
+        <form class="popmenu" id="popmenu" onmouseleave="closemenu()">
             <input type="hidden" name="filepath" value="filepath">
             <input type="submit" name="open" value="Otwórz">
             <input type="button" name="close" value="Zamknij" onclick="closemenu()">
         </form>
-        <script>
-            var pop = document.getElementById("popmenu");
-
-            function openmenu() {
-                var eventy = (event.clientY - 17) + 'px';
-                pop.style.top = eventy;
-                anim;
-                var anim = setInterval(function () {
-                    pop.style.right = '10px';
-                    clearInterval(anim);
-                }, 150);
-            }
-
-            function closemenu() {
-                pop.style.right = -450 + 'px';
-                console.log('close');
-            }
-
-            function openfile(link) {
-                window.location.href='/trashview?id=' + link;
-            }
-
-        </script>
         {#        <script src="/static/scripts/js/loadingPage.js"></script>#}
         {#        <script>loadingPage('36253978469', 'home');</script>#}
     </div>
