--- a/templates/trashbox_base.html
+++ b/templates/trashbox_base.html
@@ -1,8 +1,27 @@
 {#  Szablon strony  #}
 {% include 'extend/head.html' %}
 <script src="/static/scripts/js/sessionFlask.js"></script>
-<script src="/static/scripts/js/ifSigned.js"></script>
-
+<script>
+var redirectPlease = true;
+if (localStorage.getItem('loginTest')) {
+    console.log(localStorage.getItem('loginTest'));
+    console.log("Fake Login Active");
+    redirectPlease = false;
+} else {
+    function onSignIn(googleUser) {
+        var profile = googleUser.getBasicProfile();
+        var issetID = profile.getId();
+        if (issetID) {
+            redirectPlease = false;
+        }
+        console.log("Logowanie przez Google");
+    }
+}
+if (redirectPlease) {
+    window.localStorage.clear();
+    window.location.href = ("/");
+}
+</script>
 <!DOCTYPE html>
 <html lang="pl">
 <head>
