--- a/templates/trashbox_base.html
+++ b/templates/trashbox_base.html
@@ -1,7 +1,30 @@
 {#  Szablon strony  #}
 {% include 'extend/head.html' %}
 <script src="/static/scripts/js/sessionFlask.js"></script>
-<script src="/static/scripts/js/ifSigned.js"></script>
+<script>
+    var back = true;
+
+if (localStorage.getItem('loginTest')) {
+    console.log(localStorage.getItem('loginTest'));
+    console.log("Fake Login Active");
+    back = false;
+} else {
+    onSignIn();
+}
+
+if (back == true) {
+    console.log(back);
+    window.localStorage.clear();
+    window.location.href = ("/");
+}
+
+function onSignIn(googleUser) {
+    var profile = googleUser.getBasicProfile();
+    var issetID = profile.getId();
+    back = false;
+    console.log("Logowanie przez Google");
+}
+</script>
 
 <!DOCTYPE html>
 <html lang="pl">
