zadziała czy nie?

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,5 +59,6 @@
 {#  Podłączenie stopki  #}
 {% include 'extend/footer.html' %}
 <script src="/static/scripts/js/index.js"></script>
+<script src="/static/scripts/js/sessionFlask.js"></script>
 </body>
 </html>
