--- a/templates/trashbox.html
+++ b/templates/trashbox.html
@@ -36,7 +36,7 @@
                         {#  Ikona odpowiadająca typowi pliku  #}
                         <td><i class="icon-{{ file.Icon }}"></i></td>
 
-                        <td>{{ file.Name }}.{{ file.Extension }}
+                        <td>{{ file.Name }} B
                             {#                        <i class="icon-{{ file.lock }}"></i>#}
                         </td>
                         <td>{{ file.Size }}</td>
