--- a/templates/trashbox_base.html
+++ b/templates/trashbox_base.html
@@ -34,6 +34,7 @@
 
 {#  Wstrzyknięcie zewnętrznego html'a  #}
 <!--Body, do którego AJAX'em ładowane są fragmenty html'a-->
+<img id="loading_screen" src="../static/pic/spinner.gif" class="loading_screen"></img>
 <div id="include"></div>
 
 {#  Podpięcie stopki  #}
